# svd2cpp

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: ProjectSettings.cmake
pac/: RegBase.h  test.hpp
pac/test/: test.hpp
src/: Builders.cpp  Builders.hpp  CMakeLists.txt  FileBuilder.cpp  FileBuilder.hpp  IBuilder.hpp  Peripheral.hpp  XmlParser.cpp  XmlParser.hpp  main.cpp
